--- a/packages/mimic/package.json
+++ b/packages/mimic/package.json
@@ -34,7 +34,8 @@
     "express": "~4.16.1",
     "fast-xml-parser": "^3.14.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "yargs": "^14.2.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
@@ -43,6 +44,7 @@
     "@types/express": "^4.17.2",
     "@types/http-errors": "^1.6.2",
     "@types/morgan": "^1.7.37",
+    "@types/yargs": "^13.0.3",
     "nodemon": "^1.19.4",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.1",
