--- a/packages/mimic/package.json
+++ b/packages/mimic/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon",
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "example:run": "cd example && DEBUG=mimic* node ../dist/index.js -p 4008"
   },
   "bin": {
     "mimic": "./dist/index.js"
