--- a/packages/mimic/package.json
+++ b/packages/mimic/package.json
@@ -22,24 +22,26 @@
     "start": "node ./bin/www",
     "dev": "nodemon",
     "build": "tsc -p tsconfig.json",
-    "example:run": "cd example && DEBUG=mimic* node ../dist/index.js -p 4008"
+    "example": "cd example && DEBUG=mimic* node ../dist/index.js -p 4008"
   },
   "bin": {
     "mimic": "./dist/index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chalk": "^3.0.0",
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "debug": "^4.1.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "fast-xml-parser": "^3.14.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
+    "morgan": "^1.9.1",
     "yargs": "^14.2.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
+    "@types/chalk": "^2.2.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
