--- a/packages/siluet/package.json
+++ b/packages/siluet/package.json
@@ -10,9 +10,12 @@
   "author": "maxdipesh@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "debug": "^4.1.1",
+    "glob": "^7.1.6",
     "typescript": "^3.9.5"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.2",
     "@types/node": "^14.0.13",
     "ts-node": "^8.10.2"
   }
