--- a/packages/siluet/package.json
+++ b/packages/siluet/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "maxdipesh@gmail.com",
   "license": "MIT",
@@ -16,7 +16,10 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.2",
+    "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
     "ts-node": "^8.10.2"
   }
 }
