--- a/packages/subway/package.json
+++ b/packages/subway/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "dev": "node .",
-    "start": "node ."
+    "start": "node .",
+    "test": "jest --config=jest.config.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -23,5 +24,10 @@
     "http-proxy": "^1.18.1",
     "socket.io": "^3.1.2",
     "socket.io-client": "^3.1.2"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "nock": "^13.0.11",
+    "supertest": "^6.1.3"
   }
 }
