--- a/packages/subway/package.json
+++ b/packages/subway/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "debug": "^4.3.1",
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "socket.io": "^3.1.2",
