--- a/packages/subway/package.json
+++ b/packages/subway/package.json
@@ -16,6 +16,9 @@
     "start": "node .",
     "test": "jest --config=jest.config.js"
   },
+  "bin": {
+    "kancha": "./bin/kancha.js"
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
@@ -24,7 +27,8 @@
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "socket.io": "^3.1.2",
-    "socket.io-client": "^3.1.2"
+    "socket.io-client": "^3.1.2",
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
     "jest": "^26.6.3",
