--- a/packages/subway/package.json
+++ b/packages/subway/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "socket.io": "^3.1.2",
-    "socket.io-client": "^3.1.2"
+    "socket.io-client": "^3.1.2",
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
     "jest": "^26.6.3",
