--- a/packages/subway/package.json
+++ b/packages/subway/package.json
@@ -6,6 +6,9 @@
   "author": "Dipesh Yadav <maxdipesh@gmail.com>",
   "license": "MIT",
   "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/dipeshy/deu",
@@ -34,5 +37,6 @@
     "jest": "^26.6.3",
     "nock": "^13.0.11",
     "supertest": "^6.1.3"
-  }
+  },
+  "gitHead": "7a200e748f91e7a98cfddca7b24abda8136ad810"
 }
